--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,20 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-trait = "0.1.85"
+bytes = "1.9.0"
 futures = "0.3.31"
+log = "0.4.25"
 object_store = { version = "0.11.2", features = ["aws"] }
 testcontainers = "0.23"
 testcontainers-modules = { version = "0.11", features = ["localstack"] }
 tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
+tokio-stream = "0.1.17"
 
 [[bin]]
 name = "single_runtime"
 path = "src/single_runtime.rs"
+
+[[bin]]
+name = "two_runtimes"
+path = "src/two_runtimes.rs"
